# serializer version: 1
# name: test_calculate_responsibility[Distribution.BetaBinomial-dist_args1]
  -6077747479895838668
# ---
# name: test_calculate_responsibility[Distribution.BetaBinomial-dist_args2]
  1589603979160202835
# ---
# name: test_calculate_responsibility[Distribution.BetaBinomial-dist_args3]
  895714466626086414
# ---
# name: test_calculate_responsibility[Distribution.BetaBinomial-dist_args4]
  1602514167914354206
# ---
# name: test_calculate_responsibility[Distribution.Uniform-dist_args0]
  7783030412065810782
# ---
